--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,18 @@
 # 配置文件
-# apk存放路径文件夹（最好不要包含中文）
+
+# apk存放路径文件夹（不要含有中文路径）
 apk_path: D:\lin\pyproject\duokong\apkfile
 
 # apk包名
 apk_name: tv.danmaku.bili
 
-# 设置并发启动的设备数量
+# 雷电安装路径
+ld_path: D:\leidian\LDPlayer9
+
+# 使用代理开关
+proxy_switch: false
+
+# 设置启动的设备数量
 run_num: 10
 
 # 操作步骤： click：点击(坐标)，sleep：等待时间(秒) ，swipe：滑动屏幕(坐标)
@@ -14,24 +21,25 @@ action:
     sleep: 5
     click: 360, 900
   step1:
-    sleep: 10
+    sleep: 5
     click: 439,195
   step2:
-    sleep: 10
+    sleep: 5
     click: 545,195
   step3:
-    sleep: 10
+    sleep: 5
     click: 220,195
   step4:
-    sleep: 10
-    click: 334,195
+    sleep: 5
+    click: 169,196
   step5:
-    sleep: 10
+    sleep: 5
     swipe: 460, 330, 320, 330
   step6:
-    sleep: 10
+    sleep: 5
     click: 349, 293
   step7:
-    sleep: 30
+    sleep: 10
     press: BACK
+
 
